add correct links

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and
-    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
-    really enjoy what I do.">
+  thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+  really enjoy what I do.">
   <meta name="keywords"
     content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
   <meta name="author" content="Agata Bialoskorska">
-  <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
+  <link rel="icon" href="/favicon.ico">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"
+    integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.1/axios.min.js" integrity="sha512-m9S8W3a9hhBHPFAbEIaG7J9P92dzcAWwM42VvJp5n1/M599ldK6Z2st2SfJGsX0QR4LfCVr681vyU5vW8d218w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <title>Agata's Page</title>
 </head>
+
 <body>
   <div id="app"></div>
-  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
